@@ -1,6 +1,7 @@
 2.8.1
  - fix: wrong scale for viscosity in bulk emodulus computation (#104)
  - fix: save unused polygon filters in sessions (#101)
+ - fix: allow to delete polygon filters (#100)
 2.8.0
  - BREAKING CHANGE: The volume feature in all previous versions was
    overestimated by about 2µm³. Please re-run your analysis pipeline.
